@@ -29,17 +29,6 @@ import java.security.MessageDigest;
 import java.security.NoSuchAlgorithmException;
 import java.util.List;
 
-import javax.xml.parsers.DocumentBuilder;
-import javax.xml.parsers.DocumentBuilderFactory;
-
-import org.w3c.dom.Document;
-import org.w3c.dom.Element;
-import org.w3c.dom.Node;
-import org.w3c.dom.NodeList;
-import org.w3c.dom.Text;
-
-import biz.source_code.base64Coder.Base64Coder;
-
 import com.keepassdroid.crypto.finalkey.FinalKey;
 import com.keepassdroid.crypto.finalkey.FinalKeyFactory;
 import com.keepassdroid.database.exception.InvalidKeyFileException;
@@ -112,7 +101,7 @@ public abstract class PwDatabase {
 				return md.digest(fileKey);
 	}
 
-	protected static byte[] getFileKey(String fileName)
+	protected byte[] getFileKey(String fileName)
 			throws InvalidKeyFileException, IOException {
 				assert(fileName != null);
 				
@@ -180,53 +169,7 @@ public abstract class PwDatabase {
 				return md.digest();
 			}
 
-	private static final String RootElementName = "KeyFile";
-	//private static final String MetaElementName = "Meta";
-	//private static final String VersionElementName = "Version";
-	private static final String KeyElementName = "Key";
-	private static final String KeyDataElementName = "Data";
-	private static byte[] loadXmlKeyFile(String fileName) {
-		try {
-			DocumentBuilderFactory dbf = DocumentBuilderFactory.newInstance();
-			DocumentBuilder db = dbf.newDocumentBuilder();
-			FileInputStream fis = new FileInputStream(fileName);
-			Document doc = db.parse(fis);
-			
-			Element el = doc.getDocumentElement();
-			if (el == null || ! el.getNodeName().equalsIgnoreCase(RootElementName)) {
-				return null;
-			}
-			
-			NodeList children = el.getChildNodes();
-			if (children.getLength() < 2) {
-				return null;
-			}
-			
-			for ( int i = 0; i < children.getLength(); i++ ) {
-				Node child = children.item(i);
-				
-				if ( child.getNodeName().equalsIgnoreCase(KeyElementName) ) {
-					NodeList keyChildren = child.getChildNodes();
-					for ( int j = 0; j < keyChildren.getLength(); j++ ) {
-						Node keyChild = keyChildren.item(j);
-						if ( keyChild.getNodeName().equalsIgnoreCase(KeyDataElementName) ) {
-							NodeList children2 = keyChild.getChildNodes();
-							for ( int k = 0; k < children2.getLength(); k++) {
-								Node text = children2.item(k);
-								if (text.getNodeType() == Node.TEXT_NODE) {
-									Text txt = (Text) text;
-									return Base64Coder.decode(txt.getNodeValue());
-								}
-							}
-						}
-					}
-				}
-			}
-		} catch (Exception e) {
-			return null;
-		}
-		return null;
-	}
+	protected abstract byte[] loadXmlKeyFile(String fileName);
 
 	public static byte[] hexStringToByteArray(String s) {
 	    int len = s.length();
