@@ -1,3 +1,6 @@
+KeePassDroid (1.5.6)
+  * Keyfile Fix
+
 KeePassDroid (1.5.5)
   * Twofish support for .kdb
   * Refresh fixes
